--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,25 +1,22 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Jasmine Spec Runner v2.0.1</title>
+  <meta charset="utf-8">
+  <title>Jasmine Spec Runner v2.8.0</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.1/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.1/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.8.0/jasmine_favicon.png">
+  <link rel="stylesheet" href="lib/jasmine-2.8.0/jasmine.css">
 
-  <!-- include library files here... -->
-  <script type="text/javascript" src="lib/jasmine-2.0.1/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-2.0.1/jasmine-html.js"></script>
-  <script type="text/javascript" src="lib/jasmine-2.0.1/boot.js"></script>
-  <script type="text/javascript" src="lib/jquery-2.1.1/jquery-2.1.1.js"></script>
-  <script type="text/javascript" src="lib/jasmine-jquery-2.0.5/jasmine-jquery.js"></script>
+  <script src="lib/jasmine-2.8.0/jasmine.js"></script>
+  <script src="lib/jasmine-2.8.0/jasmine-html.js"></script>
+  <script src="lib/jasmine-2.8.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/gilded_rose.js"></script>
+  <script src="src/gilded_rose.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/spec_helper.js"></script>
-  <script type="text/javascript" src="spec/gilded_rose_spec.js"></script>
+  <script src="spec/spec_helper.js"></script>
+  <script src="spec/gilded_rose_spec.js"></script>
 
 </head>
 
